--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "postcss": "8.4.33",
